Added TOC and explanation

--- a/lepiter/lepiter.properties
+++ b/lepiter/lepiter.properties
@@ -1,5 +1,6 @@
 {
 	"uuid" : "3fb8d2cb-07bb-0d00-9307-69370f8f3ae5",
+	"tableOfContents" : "8p46kllcamloitsemtfqj0ds6",
 	"schema" : "4.1",
 	"databaseName" : "scgbern/scgbib/lepiter"
 }
